fixed portfolio issues

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="jumbotron d-flex flex-column justify-content-center p-5">
-        <h1 class="display-4 d-flex justify-content-center">Valentina Brambila Grando</h1>
+        <h1 class="display-4 d-flex justify-content-center title-jumbotron">Valentina Brambila Grando</h1>
         <p class="lead d-flex justify-content-center">Georgia Institute of Technology | Computer Science '22</p>
         <hr class="my-4">
         <p class="d-flex justify-content-center">I am a coder and a dreamer. A bookworm and an artist. And I like to let my dreams spill into my keyboard.</p>
@@ -77,9 +77,6 @@
             </blockquote>
         </div>
     </div>
-      <!-- <p>Click here to get a random message:</p>
-      <button onclick="addRandomGreeting()">Hello</button>
-      <div id="greeting-container"></div> -->
     </div>
     <hr class="featurette-divider">
     <footer class="container p-5">
