--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -1,19 +1,92 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-    <title>My Portfolio</title>
+    <link rel="icon" type="image/png" href="./resources/terminal.png"/>
+    <title>Valentina Brambila Grando</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    
   </head>
   <body>
-    <div id="content">
-      <h1>My Portfolio</h1>
-      <p>This is my portfolio.</p>
-      <p>Click <a href="/hello">here</a> to see content created by server code.</p>
-      <p>Click here to get a random message:</p>
-      <button onclick="addRandomGreeting()">Hello</button>
-      <div id="greeting-container"></div>
+    <div class="jumbotron d-flex flex-column justify-content-center p-5">
+        <h1 class="display-4 d-flex justify-content-center title-jumbotron">Valentina Brambila Grando</h1>
+        <p class="lead d-flex justify-content-center">Georgia Institute of Technology | Computer Science '22</p>
+        <hr class="my-4">
+        <p class="d-flex justify-content-center">I am a coder and a dreamer. A bookworm and an artist. And I like to let my dreams spill into my keyboard.</p>
     </div>
+    <div id="content" class="d-flex flex-column align-items-center p-3">
+      <div class="d-flex flex-column align-items-center contactinfo">
+          <h2 class="p-3">Contact Me</h2>
+          <div class="d-flex justify-content-around iconscontact p-3">
+            <a href="https://github.com/Valentinagrando" target="blank"><i class="fab fa-github fa-2x"></i></a>
+            <a href="https://www.linkedin.com/in/valentina-b-grando/" target="blank"><i class="fab fa-linkedin fa-2x"></i></a>
+            <a href="./resources/resume2.pdf". target="blank"><i class="far fa-file fa-2x"></i></a>          
+          </div>
+      </div>
+       <div class="d-flex justify-content-around introduction p-3">
+        <img src="./resources/me.jpg" alt="Picture of me, Valentina" width="300" height="400" class="p-3">
+        <div class="skills d-flex flex-column justify-content-center p-3">
+            <div class="technical p-3">
+            <h2>Technical Skills</h2>
+                <span class="badge badge-pill badge-info">Java</span>
+                <span class="badge badge-pill badge-info">Python</span>
+                <span class="badge badge-pill badge-info">Javascript</span>
+                <span class="badge badge-pill badge-info">HTML</span>
+                <span class="badge badge-pill badge-info">CSS</span>
+                <span class="badge badge-pill badge-info">C</span>
+                <span class="badge badge-pill badge-info">Swift</span> 
+            </div>
+            <div class="technologies p-3">
+                <h2>Technologies</h2>
+                <span class="badge badge-pill badge-success">Node.JS</span>
+                <span class="badge badge-pill badge-success">Angular</span>
+                <span class="badge badge-pill badge-success">SpringBoot</span>
+                <span class="badge badge-pill badge-success">Kibana</span>
+                <span class="badge badge-pill badge-success">React.js</span>
+                <span class="badge badge-pill badge-success">ElasticSearch</span>    
+                <span class="badge badge-pill badge-success">Flask</span>
+                <span class="badge badge-pill badge-success">Git</span>
+                <span class="badge badge-pill badge-success">Tkinter</span>
+                <span class="badge badge-pill badge-success">MongoDB</span>
+                <span class="badge badge-pill badge-success">Android Studio</span>
+                <span class="badge badge-pill badge-success">XCode</span>        
+            </div>
+            <div class="languages p-3">
+                <h2>Languages</h2>
+                <span class="badge badge-pill badge-primary">Potuguese</span>
+                <span class="badge badge-pill badge-primary">English</span>
+                <span class="badge badge-pill badge-primary">Spanish</span>
+                <span class="badge badge-pill badge-primary">German</span>
+                <span class="badge badge-pill badge-primary">French</span>       
+            </div>
+        </div>
+    </div>
+    <div class="card favoritequote p-3">
+        <div class="card-header">
+            Favorite Quote
+        </div>
+        <div class="card-body">
+            <blockquote class="blockquote mb-0">
+            <p>“Some lose all mind and become soul,insane.<br />
+                Some lose all soul and become mind, intellectual.<br />
+                Some lose both and become accepted”</p>
+            <footer class="blockquote-footer"><cite title="Charles Bukowski">Charles Bukowski</cite></footer>
+            </blockquote>
+        </div>
+    </div>
+    </div>
+    <hr class="featurette-divider">
+    <footer class="container p-5">
+    <p class="float-right"><a href="#">Back to top</a></p>
+    <p>© 2021 Valentina Brambila Grando
+    </footer>
   </body>
+
+<script src="script.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </html>
